smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/shape-name-syntax2.smithy
// Parse error at line 4, column 11 near `%I`: Expected a valid identifier character, but found '%'
namespace com.foo

structure %Invalid {}
